option to hide the chart legend

--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,10 @@
             },
             text: `${text}`,
           },
+          // legend: {
+          //   display: true,
+          //   position: "bottom",
+          // },
         },
       });
       [
@@ -94,6 +98,7 @@
                   label: "By Community",
                   data: by_non_members,
                   backgroundColor: "rgb(252 103 132 / 60%)",
+                  // backgroundColor: "rgb(61 161 230 / 60%)",
                 },
               ],
             },
